--- a/package.json
+++ b/package.json
@@ -1,17 +1,29 @@
 {
-  "name": "ahmedgabr",
+  "homepage": "https://desgbr.github.io/VirtalScan",
+
+  "name": "virtalscan",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "axois": "^0.0.1-security",
+    "bootstrap": "^5.1.3",
+    "gh-pages": "^3.2.3",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.1.0",
     "react-dom": "^17.0.2",
-    "react-scripts": "5.0.0",
-    "web-vitals": "^2.1.2"
+    "react-fontawesome": "^1.7.1",
+    "react-scripts": "^3.0.1",
+    "web-vitals": "^2.1.2",
+    "webpack": "^4.29.6"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
